# miaogu-notepad

./: .gitignore  README.md  README_EN.md  RELEASE_v1.1.0.md  RELEASE_v1.2.0.md  clean_comments.py  index.html  package-lock.json  package.json  test-mgtree.md  update_version.py  vite.config.js  文件拖拽实现说明.md  跳转节点解析与工作原理.md
.github/workflows/: build.yml
docs/api/: api-communication.md  configuration.md  frontend-components.md  hooks.md  tauri-backend.md  utilities.md
docs/architecture/: backend-architecture.md  component-interaction-design.md  data-flow-architecture.md  frontend-architecture.md  overall-architecture.md  state-management-architecture.md
docs/features/: ai-inline-completion.md  cli-command-startup.md  file-monitoring-system.md  file-opening-support.md  fullscreen-implementation.md  i18n-system.md  markdown-rendering.md  monaco-editor-highlighting.md  theme-system.md  tree-view-implementation.md
docs/releases/: RELEASE_v1.0.0.md  RELEASE_v1.1.0.md  RELEASE_v1.2.0.md  RELEASE_v1.3.0.md  RELEASE_v1.3.1.md  RELEASE_v1.4.0.md
miaogu-tree/: package-lock.json
public/: prism-one-dark.css  prism-one-light.css
src/: App.jsx  App.scss  main.jsx  monaco-worker.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/errors/: file_processing_error.rs  mod.rs
src/components/: AppHeader.jsx  AppHeader.scss  CodeEditor.jsx  CodeEditor.scss  EditorStatusBar.jsx  EditorStatusBar.scss  LazyCodeEditor.jsx  LazyMarkdownViewer.jsx  LazyTreeEditor.jsx  LoadingComponent.jsx  MarkdownViewer.jsx  MermaidRenderer.css  MermaidRenderer.jsx  ProxyImage.jsx  SettingsModal.jsx  SettingsModal.scss  TabBar.jsx  TabBar.scss  TreeEditor.jsx  TreeEditor.scss  TreeViewer.jsx  TreeViewer.scss  WelcomeScreen.jsx  WelcomeScreen.scss
src/configs/: file-extensions.json  language-format-config.json  mgtree-language.js  mgtree-textmate.js
src/hooks/: redux.js  useFileManager.js  useFileManager.jsx  useI18n.js  useSessionRestore.js  useTheme.js
src/i18n/: index.js
src/i18n/locales/: en-US.json  zh-CN.json
src/store/: hooks.js  index.js
src/store/middleware/: persistenceMiddleware.js
src/store/slices/: editorSlice.js  fileSlice.js  themeSlice.js  updateSlice.js
src/styles/: drag-overlay.scss  viewTransitions.scss
src/utils/: exportUtils.js  footnoteParser.js  imageProxy.js  linkUtils.js  pathUtils.js  persistenceManager.js  stateManager.js  tauriApi.js  viewTransition.js
trees/: algorithm-tree.mgtree
(+1 files in other folders)
