[package]
name = "miaogu-notepad"
version = "1.1.0"
description = "A simple and beautiful notepad based on Tauri"
authors = ["hhyufan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "miaogu_notepad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset"] } # devtools enabled for debugging
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
# tauri-plugin-single-instance = "2.0.0" # 暂时禁用，存在Windows兼容性问题
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
tokio = { version = "1.0.0", features = ["full"] }
encoding_rs = "0.8"
notify = "6.1"
once_cell = "1.19"

